# jaxions

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  fftCode.cpp  fftCode.h  fftCuda.cpp  index.cuh  index.h  map.h  parse.h  readWrite.cpp  readWrite.h  readWrite.old.cpp  scalarField.cpp  scalarField.h
.github/workflows/: pages.yml
axions/: CMakeLists.txt  RKParms.h  code3DGpu.cpp  comms.cpp  comms.h  compile  complexGpu.cuh  enum-field.h  fftCuda.h  map.cpp  parse.cpp  powerCpu.cpp  propLowMem.cu  propagator.cu  propagator.h  square.h
axions/include/: RKParms.h  complexGpu.cuh  cudaErrors.h  energy.h  enum-field.h  fftCode.h  fftCuda.h  flopCounter.h  index.cuh  index.h  intrinsics.h  momConf.h  normCoreXeon.h  normXeon.h  parse.h  powerCpu.h  propGpu.h  propSimple.h  propXeon.h  scalarField.h  scaleXeon.h  string.h  stringCpu.h  strings.h  xeonDefs.h
axions/lib/: CMakeLists.txt  comms.cpp  energy.cpp  energyXeon.cpp  fftCode.cpp  map.cpp  memAlloc.cpp  momConf.cpp  normCore.cpp  normField.cpp  normXeon.cpp  parse.cpp  powerCpusimple.cpp  propGpu.cu  propSimple.cpp  propXeon.cpp  propagator.cpp  readWrite.cpp  scalarField.cpp  scaleField.cpp  smoothGpu.cpp  smoothXeon.cpp  stringCpu.cpp  stringXeon.cpp  strings.cpp
axions/scripts/: at_figures.sh  rh_figures.sh  st_figures.sh
axions/test/: CMakeLists.txt  axions.cpp  axions_simple.cpp  testFFT.cpp
docs/: _config.yml
include/: code3DCpu.h  comms.h  complexPhi.h  cudaErrors.h  energyMap.h  energyMapXeon.h  energyXeon.h  enum-field.h  fftCode.h  genConf.h  kernelParms.cuh  memAlloc.h  normCore.h  normField.h  parse.h  powerCpu.h  propGpu.h  propSimple.h  propXeon.h  propagator.h  randXeon.h  scalarField.h  scaleField.h  smoothXeon.h  stringGpu.h  stringXeon.h  strings.h
include/WKB/: WKB.h
include/axiton/: tracker.h  trackerClass.h
include/comms/: comms.h
include/cosmos/: cosmos.h  jaxi-cosmo.txt
include/energy/: dContrast.h  energy.h  energyGpu.h  energyMap.h  energyMapGpu.h  energyMapXeon.h  energyXeon.h
include/fft/: fftCode.h
include/gadget/: gadget_output.h
include/gravity/: gravityPaxionXeon.h  potential.h  potentialClass.h
include/io/: output_nyx.h  readWrite.h
include/map/: map.h
include/meas/: meas.h  measa.h
include/projector/: projector.h
include/propagator/: RKParms.h  allProp.h  fsPropThetaXeon.h  fsPropXeon.h  fs_acceleration.h  inLapla.h  laplacian.h  prop-def-mac.h  propBase.h  propClass.h  propGpu.h  propNaxXeon.h  propPaxXeon.h  propTheta.h  propThetaGpu.h  propThetaModXeon.h  propThetaXeon.h  propXeon.h  propXeonNN.h  propagator.h  sProp.h  sPropThetaXeon.h  sPropXeon.h  (+1 more)
lib/: CMakeLists.txt  energy.cpp  energyMap.cpp  energyMapXeon.cpp  energyXeon.cpp  fftCode.cpp  genConf.cpp  map.cpp  memAlloc.cpp  normCoreXeon.cpp  parse.cpp  powerCpusimple.cpp  powerCpusimple_legacy.cpp  powerCpusimple_old.cpp  propSimple.cpp  propXeon.cpp  propagator.cpp  randXeon.cpp  readWrite.cpp  scalarField.cpp  scaleXeon.cpp  square.cu  stringCpu.cpp  stringGpu.cu  stringXeon.cpp  strings.cpp
lib/WKB/: WKB.cpp
lib/axiton/: tracker.cpp
lib/comms/: comms.cpp
lib/cosmos/: cosmos.cpp
lib/energy/: dContrast.cpp  energy.cpp  energyGpu.cu  energyMap.cpp  energyMapGpu.cu  energyMapThetaGpu.cu  energyMapThetaXeon.cpp  energyMapXeon.cpp  energyNaxionXeon.cpp  energyPaxionXeon.cpp  energyThetaGpu.cu  energyThetaXeon.cpp  energyXeon.cpp  energyXeonV2.cpp
lib/fft/: fftCode.cpp  fftCode_save.cpp  fftCuda.cpp
lib/gadget/: gadget_output.cpp
lib/gravity/: potential.cpp
lib/io/: output_nyx.cpp  readWrite.cpp  readWrite.pHdf5.cpp  writeStringCo.cpp
lib/map/: map.cpp  maps.cpp
lib/meas/: meas.cpp  measa.cpp
lib/projector/: projector.cpp
lib/propagator/: fs_acceleration.cpp  laplacian.cpp  nlaplacian.cpp  propGpu.cu  propSimple.cpp  propSimple_2.cpp  propTheta.cpp  propThetaGpu.cu  propThetaModGpu.cu  propThetaXeon.cpp  propXeon.cpp  propXeonV2.cpp  propagator.cpp  sPropThetaXeon.cpp  sPropXeon.cpp  sPropagator.cpp  spropThetaXeon.cpp  spropagator.cpp
lib/reducer/: reducer.cpp
lib/scalar/: folder.cpp  fourier.cpp  mendTheta.cpp  mendThetaGpu.cu  mendThetaXeon.cpp  normCore.cpp  normCoreGpu.cu  normCoreXeon.cpp  normField.cpp  normGpu.cu  normXeon.cpp  scalarField.cpp  scalarField_myv.cpp  scaleField.cpp  scaleGpu.cu  scaleXeon.cpp  scaleXeonSimd.cpp  theta2Cmplx.cpp  theta2CmplxGpu.cu  theta2CmplxXeon.cpp  theta2Naxion.cpp  theta2NaxionXeon.cpp  theta2Paxion.cpp  theta2PaxionXeon.cpp  thetaGpu.cu  thetaScalar.cpp  thetaXeon.cpp  varNQCD.cpp
lib/spectrum/: masker.cpp  spectrum.cpp  spectrum.h
lib/strings/: .stringCpu.cpp.kate-swp  length.cpp  stringCpu.cpp  stringGpu.cu  stringXeon.cpp  strings.cpp
lib/utils/: kgvops.cpp  logger.cpp  memAlloc.cpp  misc.cpp  parse.cpp  profiler.cpp  system.cpp
scripts/: MC-clustering-setup.ipynb  analise.sh  at_figures.sh  autobasic.py  autoplot.py  axaxdir.sh  b_figures.sh  clear.sh  con_fig.sh  contrastevol.py  craxdir.sh  dens_figures.sh  en_fig.sh  h5cpBNS.sh  jaxi  jaxions.tex  logdens_fig.sh  makeVideo3D.py  mcmc.py  measfile.py  movie-maker.ipynb  mt_study2.ipynb  params.py  plot2D.py  plot2D_new.py  plot3Dconf.py  plot3Ddens.py  plot3Dslice.py  plot4D.py  plotCoStr.py  plotMask.py  plotStr.py  plotaxion.py  po_fig.sh  prepareStr.py  pspecevol.py  randomstrings-example.ipynb  rh_figures.sh  sim-example.sh  simulation-outlook.ipynb  (+9 more)
test/: CMakeCache.txt  CMakeLists.txt  Paxions.cpp  SPaxionslight.cpp  VQcdTest.cpp  WKBaxion.cpp  WKBonce.cpp  WKVaxion.cpp  aTheta.cpp  aaxions.cpp  axions.cpp  axions_simple.cpp  axionslight.cpp  axionslight2.cpp  axionslight2?.cpp  axionsreallylight.cpp  contrastmap.cpp  fAxions.cpp  filesizetest.cpp  gAxions.cpp  gadgetme.cpp  gravi.cpp  gravi2.cpp  gravi3.cpp  hallo.cpp  hyper.cpp  ic_test.cpp  ic_tests.cpp  jaxions.cpp  probi.cpp  reduce.cpp  reduceMap.cpp  reducemap.cpp  sAxions.cpp  sinTest.cpp  stringstudy.cpp  testFFT.cpp  testFT.cpp  testGPU.cpp  testHdf5.cpp  (+3 more)
test/oldstuff/: SPaxionslight.cpp  aaxions.cpp  axions_simple.cpp  axionslight.cpp  axionslight2.cpp  axionslight2?.cpp  hallo.cpp
(+126 files in other folders)
