include_directories(.)
set(LIBS Axions ${CMAKE_THREAD_LIBS_INIT} )
LIST(APPEND LIBS ${MPI_CXX_LIBRARIES})
LIST(APPEND LIBS ${FFTW_LIBRARY})
LIST(APPEND LIBS ${FFTWF_LIBRARY})
LIST(APPEND LIBS ${FFTW_OMP_LIBRARY})
LIST(APPEND LIBS ${FFTWF_OMP_LIBRARY})
LIST(APPEND LIBS ${FFTW_MPI_LIBRARY})
LIST(APPEND LIBS ${FFTWF_MPI_LIBRARY})
LIST(APPEND LIBS ${HDF5_LIBRARY})
LIST(APPEND LIBS ${GSL_LIBRARY})
LIST(APPEND LIBS ${GSL_CBLAS_LIBRARY})

if(USE_GPU)
  LIST(APPEND LIBS ${CUDA_cufft_LIBRARY} ${CUDA_cudart_LIBRARY})
endif()

add_executable(aTheta      aTheta.cpp)
add_executable(mTheta      testMendTheta.cpp)
add_executable(sinTest     sinTest.cpp)
add_executable(axion3d     axions.cpp)
add_executable(faxion3d    fAxions.cpp)
add_executable(gaxion3d    gAxions.cpp)
#add_executable(laxion3d    axionslight.cpp)
add_executable(raxion3d    axionsreallylight.cpp)
add_executable(jaxion3d    jaxions.cpp)
add_executable(vaxion3d    vaxions.cpp)
add_executable(contrastmap contrastmap.cpp)
add_executable(WKVaxion    WKVaxion.cpp)
add_executable(WKBaxion    WKBaxion.cpp)
add_executable(WKBonce     WKBonce.cpp)
add_executable(testFFT     testFFT.cpp)
add_executable(testHdf5    testHdf5.cpp)
add_executable(filesize    filesizetest.cpp)
add_executable(ictest      ic_test.cpp)

target_link_libraries(aTheta      ${LIBS} )
target_link_libraries(mTheta      ${LIBS} )
target_link_libraries(sinTest     ${LIBS} )
target_link_libraries(axion3d     ${LIBS} )
target_link_libraries(faxion3d    ${LIBS} )
target_link_libraries(gaxion3d    ${LIBS} )
#target_link_libraries(laxion3d    ${LIBS} )
target_link_libraries(jaxion3d    ${LIBS} )
target_link_libraries(vaxion3d    ${LIBS} )
target_link_libraries(raxion3d    ${LIBS} )
target_link_libraries(contrastmap ${LIBS} )
target_link_libraries(WKBaxion    ${LIBS} )
target_link_libraries(WKVaxion    ${LIBS} )
target_link_libraries(WKBonce     ${LIBS} )
target_link_libraries(testFFT     ${LIBS} )
target_link_libraries(testHdf5    ${LIBS} )
target_link_libraries(filesize    ${LIBS} )
target_link_libraries(ictest      ${LIBS} )

#add_custom_target(outFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out)
#add_custom_target(mFolder         ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/m)
#add_custom_target(dumpFolder      ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/dump)
#add_custom_target(atFolder        ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/at)
#add_custom_target(rhoFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/rho)
#add_custom_target(strFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/str)
#add_custom_target(densFolder      ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/dens)
#add_custom_target(conFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/con)
#add_custom_target(plotsFolder     ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots)
#add_custom_target(atplotFolder    ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/at)
#add_custom_target(rhoplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/rho)
#add_custom_target(strplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/str)
#add_custom_target(densplotsFolder ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/dens)
#add_custom_target(conplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/con)
