include_directories(.)
set(LIBS Axions ${CMAKE_THREAD_LIBS_INIT} )
LIST(APPEND LIBS ${MPI_CXX_LIBRARIES})
LIST(APPEND LIBS ${FFTW_LIBRARY})
LIST(APPEND LIBS ${FFTWF_LIBRARY})
LIST(APPEND LIBS ${FFTW_OMP_LIBRARY})
LIST(APPEND LIBS ${FFTWF_OMP_LIBRARY})
LIST(APPEND LIBS ${FFTW_MPI_LIBRARY})
LIST(APPEND LIBS ${FFTWF_MPI_LIBRARY})
LIST(APPEND LIBS ${HDF5_LIBRARY})
LIST(APPEND LIBS ${GSL_LIBRARY})
LIST(APPEND LIBS ${GSL_CBLAS_LIBRARY})

if(USE_NYX_OUTPUT)
	LIST(APPEND LIBS ${AMReX_LIBRARY})
endif()


if(USE_GPU)
  LIST(APPEND LIBS ${CUDA_cufft_LIBRARY} ${CUDA_cudart_LIBRARY})
endif()

add_executable(vaxion3d     vaxions.cpp)
#add_executable(basoc        basic.cpp)
#add_executable(WKVaxion    WKVaxion.cpp)
#add_executable(paxion3d    Paxions.cpp)
#add_executable(gravi3      gravi3.cpp)
#add_executable(probi       probi.cpp)

target_link_libraries(vaxion3d    ${LIBS} )
#target_link_libraries(basoc    ${LIBS} )
#target_link_libraries(WKVaxion    ${LIBS} )
#target_link_libraries(paxion3d    ${LIBS} )
#target_link_libraries(gravi3     ${LIBS} )
#target_link_libraries(probi     ${LIBS} )

#add_custom_target(outFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out)
#add_custom_target(mFolder         ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/m)
#add_custom_target(dumpFolder      ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/dump)
#add_custom_target(atFolder        ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/at)
#add_custom_target(rhoFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/rho)
#add_custom_target(strFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/str)
#add_custom_target(densFolder      ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/dens)
#add_custom_target(conFolder       ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/con)
#add_custom_target(plotsFolder     ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots)
#add_custom_target(atplotFolder    ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/at)
#add_custom_target(rhoplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/rho)
#add_custom_target(strplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/str)
#add_custom_target(densplotsFolder ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/dens)
#add_custom_target(conplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/con)
