include_directories(.)
set(LIBS Axions ${CMAKE_THREAD_LIBS_INIT} )
LIST(APPEND LIBS ${MPI_CXX_LIBRARIES})
LIST(APPEND LIBS ${FFTW_LIBRARY})
LIST(APPEND LIBS ${FFTWF_LIBRARY})
LIST(APPEND LIBS ${FFTW_MPI_LIBRARY})
LIST(APPEND LIBS ${FFTWF_MPI_LIBRARY})
LIST(APPEND LIBS ${HDF5_LIBRARY})

if(USE_GPU)
  LIST(APPEND LIBS ${CUDA_cufft_LIBRARY} ${CUDA_cudart_LIBRARY})
endif()

add_executable(axion3d axions.cpp)
add_executable(testFFT testFFT.cpp)
add_executable(simple3D axions_simple.cpp)
target_link_libraries(axion3d ${LIBS} )
target_link_libraries(testFFT ${LIBS} )
target_link_libraries(simple3D ${LIBS} )

add_custom_target(outFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out)
add_custom_target(dumpFolder ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/dump)
add_custom_target(atFolder   ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/at)
add_custom_target(rhoFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/rho)
add_custom_target(strFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/str)
add_custom_target(plotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots)
add_custom_target(atplotFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/at)
add_custom_target(rhoplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/rho)
add_custom_target(strplotsFolder  ALL COMMAND ${CMAKE_COMMAND} -E make_directory out/plots/str)
